--- a/charts/anaheim-licensing-adapter/templates/deployment.yaml
+++ b/charts/anaheim-licensing-adapter/templates/deployment.yaml
@@ -51,7 +51,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: graphql-auth-secret
-                  key: AUTHENTICATION_HOSTNAME         
+                  key: AUTHENTICATION_HOSTNAME   
+            - name: DUCLOXAPIKEY
+              valueFrom:
+                secretKeyRef:
+                  name: "duclo-api-key-secret"
+                  key: DUCLO_API_KEY      
             - name: DUCLO_PARTNER_LICENSE_URL
               valueFrom:
                 configMapKeyRef:
