--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -23,6 +23,8 @@ image:
       value: "http://anaheim-annotator-service:3012"
     - name: TRAINING_ASSETS_SERVICE_URL
       value: "http://anaheim-training-assets-service:3010"
+    - name: CAN_RETRAIN_MINUTES
+      value: 30
       
 imagePullSecrets:
   - name: dockerconfigjson-github-com
