--- a/charts/anaheim-wavesync-adapter-service/templates/ingressroute.yaml
+++ b/charts/anaheim-wavesync-adapter-service/templates/ingressroute.yaml
@@ -27,6 +27,9 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}  
       middlewares:
+      {{- if eq .Values.trustForwardHeader true }}
+      - name: "{{ include ".helm.fullname" . }}-auth"
+      {{- end }}
       {{ if (not (hasKey .Values "noStripPath")) }}
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}   
