--- a/charts/hasura/charts/anaheim-authentication-service/templates/deployment.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/templates/deployment.yaml
@@ -44,13 +44,18 @@ spec:
             - configMapRef:
                 name: "duclo-configmap"
           env: 
-          {{ if eq .Values.AWS.accountId "547990419648" }}
-          HASURA_GRAPHQL_ENABLE_CONSOLE: false
-          HASURA_GRAPHQL_DISABLE_CORS: true
-          HASURA_GRAPHQL_ADMIN_INTERNAL_ERRORS: false
-          HASURA_GRAPHQL_DEV_MODE: false
-          HASURA_GRAPHQL_ENABLED_APIS: "graphql"
-          {{- end }}
+            {{- if or (eq .Values.AWS.accountId "547990419648" ) (eq .Values.AWS.accountId "278837733282") }}
+            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
+              value: "false"
+            - name: HASURA_GRAPHQL_DISABLE_CORS
+              value: "true"
+            - name: HASURA_GRAPHQL_ADMIN_INTERNAL_ERRORS
+              value: "false"
+            - name: HASURA_GRAPHQL_DEV_MODE
+              value: "false"
+            - name: HASURA_GRAPHQL_ENABLED_APIS
+              value: "graphql"
+            {{- end }}
             - name: POSTGRESURI
               valueFrom:
                 secretKeyRef:
