--- a/charts/hasura/charts/anaheim-authentication-service/values.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/values.yaml
@@ -3,7 +3,7 @@ domainPath: "auth"
 
 image:
   repository: ghcr.io/htaic/anaheim-authentication-service
-  tag: latest
+  tag: release-1.0.0-1006
   pullPolicy: Always
   containerPort: 9876
   hostname: auth-service
@@ -34,4 +34,4 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
 
 AWS:
-  accountId: ""
+  accountId: "547990419648"
