--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -90,8 +90,6 @@ spec:
               # as well as validate the orgId value if used in the query/mutation.
             - name: HASURA_GRAPHQL_AUTH_HOOK_MODE
               value: POST
-            - name: EVENTBRIDGE_HOSTNAME
-              value: http://anaheim-eventbridge:9877
             - name: AUTHENTICATION_HOSTNAME
               value: http://anaheim-graphql-service-anaheim-authentication-service:9876
             - name: EVENTBRIDGE_HOSTNAME
@@ -99,10 +97,10 @@ spec:
                 secretKeyRef:
                   name: "graphql-auth-secret"
                   key: AWS_EVENTBRIDGE_HOSTNAME          
-          {{- if .Values.image.env }}
-          env: 
-            {{- toYaml .Values.image.env | nindent 12 }}
-          {{- end }}
+          # {{- if .Values.image.env }}
+          # env: 
+          #   {{- toYaml .Values.image.env | nindent 12 }}
+          # {{- end }}
           args: [ {{.Values.image.args}} ]
           ports:
             - name: http
