--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
@@ -36,7 +36,39 @@ serviceAccount:
   name: ""
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 3
   targetCPUUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
+
+affinity:
+  #Preferred if nodes are less please use this block
+  podAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+     - weight: 100
+       podAffinityTerm:
+         labelSelector:
+           matchExpressions:
+           - key: app.kubernetes.io/name
+             operator: In
+             values:
+               - anaheim-verification-portlet
+         topologyKey: "topology.kubernetes.io/zone"
+  # podAffinity:
+  #   requiredDuringSchedulingIgnoredDuringExecution:
+  #     - labelSelector:
+  #         matchExpressions:
+  #         - key: app.kubernetes.io/name
+  #           operator: In
+  #           values:
+  #           - anaheim-verification-portlet
+  #       topologyKey: "topology.kubernetes.io/zone"
+
+topologySpreadConstraints:
+  - maxSkew: 1
+    topologyKey: "topology.kubernetes.io/zone"
+    whenUnsatisfiable: DoNotSchedule
+    labelSelector:
+      matchLabels:
+        app.kubernetes.io/name: anaheim-verification-portlet
