--- a/charts/anaheim-portal/charts/anaheim-container/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/deployment.yaml
@@ -83,3 +83,4 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.topologySpreadConstraints }}
+      {{- end }}
