--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/deployment.yaml
@@ -80,7 +80,7 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
+     {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -89,4 +89,6 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.topologySpreadConstraints }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
