--- a/charts/anaheim-portal/charts/anaheim-container/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/deployment.yaml
@@ -83,4 +83,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.topologySpreadConstraints }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
+
