--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/templates/deployment.yaml
@@ -89,4 +89,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.topologySpreadConstraints }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
+
