--- a/charts/hasura/values.yaml
+++ b/charts/hasura/values.yaml
@@ -18,6 +18,9 @@ image:
   pullPolicy: Always
   containerPort: 8080
   hostname: hasura
+  env:
+    - name: ENVIRONMENT
+      value: " "  
   # env:
   #   # # enable the console served by server
   #   # - name: HASURA_GRAPHQL_ENABLE_CONSOLE
@@ -62,5 +65,3 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
-AWS:
-  accountId: ""
