Added metrics and tracing and accesslogs

--- a/charts/anaheim-baseline/values.yaml
+++ b/charts/anaheim-baseline/values.yaml
@@ -57,6 +57,22 @@ traefik:
         general:
           # -- Available modes: keep, drop, redact.
           defaultmode: keep
+  metrics:
+  ## -- Enable metrics for internal resources. Default: false
+   datadog:
+     ## Address instructs exporter to send metrics to datadog-agent at this address.
+     address: /var/run/datadog/dsd.socket
+     ## The interval used by the exporter to push metrics to datadog-agent. Default=10s
+     # pushInterval: 30s
+     ## The prefix to use for metrics collection. Default="traefik"
+     # prefix: traefik
+     ## Enable metrics on entry points. Default=true
+     # addEntryPointsLabels: false
+     ## Enable metrics on routers. Default=false
+     # addRoutersLabels: true
+     ## Enable metrics on services. Default=true
+     # addServ
+  tracing: {}
 
     
   providers:
