--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -69,11 +69,11 @@ spec:
                 name: "aws-account-configmap"               
           env:
             {{- range .Values.image.env }}
-            {{- if and (eq .name "pvt-dev") (eq .value "prod") }}
+            {{- if and (eq .name "ENVIRONMENT") (eq .value "pvt-dev") }}
             - name: HASURA_GRAPHQL_DEV_MODE
-              value: "false"
+              value: "true"
             - name: HASURA_GRAPHQL_ENABLE_CONSOLE
-              value: "false"
+              value: "true"
             {{- end }}
             {{- end }}
             - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
