--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -69,11 +69,16 @@ spec:
                 name: "aws-account-configmap"               
           env:
             {{- range .Values.image.env }}
-            {{- if or (and (eq .name "ENVIRONMENT") (eq .value "relqa")) (and (eq .name "ENVIRONMENT") (eq .value "pvt-CI")) }}
+            {{- if or (and (eq .name "ENVIRONMENT") (eq .value "pvt-dev")) (and (eq .name "ENVIRONMENT") (eq .value "pvt-CI")) }}
             - name: HASURA_GRAPHQL_DEV_MODE
               value: "false"
             - name: HASURA_GRAPHQL_ENABLE_CONSOLE
               value: "false"
+            {{- else }}
+            - name: HASURA_GRAPHQL_DEV_MODE
+              value: "true"
+            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
+              value: "true"
             {{- end }}
             {{- end }} 
             - name: EVENTBRIDGE_HOSTNAME
