--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -68,6 +68,8 @@ spec:
             - configMapRef:
                 name: "aws-account-configmap"               
           env:
+            - name: ENVIRONMENT
+               value: ""  
             {{- range .Values.image.env }}
             {{- if or (and (eq .name "ENVIRONMENT") (eq .value "pvt-dev")) (and (eq .name "ENVIRONMENT") (eq .value "pvt-CI")) }}
             - name: HASURA_GRAPHQL_DEV_MODE
