--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -68,16 +68,20 @@ spec:
             - configMapRef:
                 name: "aws-account-configmap"               
           env:
-            - name: ENVIRONMENT
-               value: ""  
             {{- range .Values.image.env }}
             {{- if or (and (eq .name "ENVIRONMENT") (eq .value "pvt-dev")) (and (eq .name "ENVIRONMENT") (eq .value "pvt-CI")) }}
             - name: HASURA_GRAPHQL_DEV_MODE
               value: "false"
             - name: HASURA_GRAPHQL_ENABLE_CONSOLE
               value: "false"
-            {{- end }} 
-            {{- end }} 
+            {{- end }}
+            {{- if or (and (eq .name "ENVIRONMENT") (eq .value "relqa")) (and (eq .name "ENVIRONMENT") (eq .value "qa")) }}
+            - name: HASURA_GRAPHQL_DEV_MODE
+              value: "true"
+            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
+              value: "true"
+            {{- end }}
+            {{- end }}
             - name: EVENTBRIDGE_HOSTNAME
               valueFrom:
                 secretKeyRef:
