--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -14,6 +14,7 @@ image:
   livenessProbe: healthcheck
   readinessProbe: healthcheck
   hostname: anaheim-project-service
+  env_tag: test1
   env:
     - name: ENVIRONMENT
       value: " "
@@ -50,5 +51,3 @@ autoscaling:
   maxReplicas: 4
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
-
-env_tag: "test1"
