--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   headers:
     customResponseHeaders:
-      X-Robots-Tag: "noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex"
+      X-Robots-Tag: "noindex,nofollow"
   stripPrefix:
     prefixes:
       - "/{{ .Values.image.domainPath }}"
