--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -5,9 +5,9 @@ metadata:
   name: "{{ include ".helm.fullname" . }}-strip"
   namespace: {{ .Values.namespace }}
 spec:
-  headers:
-    customResponseHeaders:
-      X-Robots-Tag: "noindex,nofollow"
+  # headers:
+  #   customResponseHeaders:
+  #     X-Robots-Tag: noindex, nofollow
   stripPrefix:
     prefixes:
       - "/training"
