--- a/charts/anaheim-project-service/templates/deployment.yaml
+++ b/charts/anaheim-project-service/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
+    tags.datadoghq.com/env: "ENVIRONMENT"
+    tags.datadoghq.com/service: {{ .Release.Service }}
+    tags.datadoghq.com/version: {{ .Values.image.tag }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.image.replicaCount }}
