--- a/charts/anaheim-project-service/templates/deployment.yaml
+++ b/charts/anaheim-project-service/templates/deployment.yaml
@@ -5,7 +5,11 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
-    tags.datadoghq.com/env: "ENVIRONMENT"
+    {{- range $envVar := .Values.env }}
+    {{- if eq $envVar.name "ENVIRONMENT" }}
+    ags.datadoghq.com/env: {{ quote $envVar.value }}
+    {{- end }}
+    {{- end }}
     tags.datadoghq.com/service: {{ .Release.Service }}
     tags.datadoghq.com/version: {{ .Values.image.tag }}
 spec:
