--- a/charts/anaheim-portal/charts/anaheim-container/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/values.yaml
@@ -3,7 +3,7 @@ image:
   repository: ghcr.io/htaic/anaheim-portal/anaheim-container
   pullPolicy: Always
   containerPort: 3000
-  tag: "release-1.0.0-6028"
+  tag: "latest"
   livenessProbe: livez
   readinessProbe: readyz
   hostname: anaheim-container
