--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -5,7 +5,7 @@ anaheim-container:
     repository: ghcr.io/htaic/anaheim-portal/anaheim-container
     pullPolicy: Always
     containerPort: 3000
-    tag: latest
+    tag: "latest"
     hostname: anaheim-container
     envFrom:
       secretRefs:
