--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -16,7 +16,7 @@ image:
   hostname: anaheim-project-service
   env:
     - name: ENVIRONMENT
-      value: "anil"
+      value: " "
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: API_ANNOTATION_SERVICE
