--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -63,7 +63,7 @@ environments:
   pvt-dev:
     projectenv: pvt-dev
   pvt-ci: 
-    projectenv: pvt-ci
+    projectenv: pvt-CI
 
 global:
   environment: production 
