--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -48,7 +48,7 @@ anaheim-training-portlet:
     repository: ghcr.io/htaic/anaheim-portal/anaheim-training-portlet
     pullPolicy: Always
     containerPort: 3001
-    tag: release-1.0.0-6028
+    tag: "latest"
     livenessProbe: livez
     livenessProbePeriodSeconds: 240
     readinessProbe: readyz
@@ -92,7 +92,7 @@ anaheim-verification-portlet:
     repository: ghcr.io/htaic/anaheim-portal/anaheim-verification-portlet
     pullPolicy: Always
     containerPort: 3002
-    tag: release-1.0.0-6028
+    tag: latest
     livenessProbe: livez
     livenessProbePeriodSeconds: 240
     readinessProbe: readyz
